2010-10-21  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/utils.c, src/filetypes.c:
   Remove filetype default extensions from code.


2010-10-20  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/highlighting.c:
   Use radio buttons for View->Editor->Color Schemes menu.
   Don't hide the menu when only the default item is available.
 * data/colorschemes, data/colorschemes/alt.conf, wscript, Makefile.am:
   Add alternative color scheme based on Python colors.
 * scintilla/LexErlang.cxx, scintilla/makefile.win32,
   scintilla/KeyWords.cxx, scintilla/Makefile.am, src/highlighting.c,
   src/about.c, src/filetypes.c, src/filetypes.h, THANKS,
   data/filetype_extensions.conf, data/filetypes.erlang, wscript:
   Add Erlang filetype (patch by Taylor Venable, thanks).
 * src/filetypes.c, data/filetypes.*:
   Move filetype 'extension' default into data files.
 * src/filetypes.c, data/filetypes.vala:
   Move filetype comment_{open,close} defaults into data files.


2010-10-18  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * data/filetypes.c, data/filetypes.d:
   Add missing C99 keyword 'restrict' (#3046716).
   Add missing D1 keywords 'ref' and 'macro'.
   Add D2 keywords.
 * tagmanager/c.c:
   Parse Vala functions with contracts (#3080232).
 * src/project.c:
   Fix saving project indent prefs straight after using project
   properties.
 * src/highlighting.c, src/filetypes.c:
   Prevent debug message about a missing 'default' named style when
   using just a user color scheme file.


2010-10-16  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/search.c:
   Fix off-by-one bug in 'search_mark_all'.


2010-10-15  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * tagmanager/get.c:
   Ignore D /+ +/ comments.
 * tagmanager/c.c:
   Ignore D unittest blocks.
   Parse D template functions with constraints.
 * src/keybindings.c, src/keybindings.h, doc/geany.txt, doc/geany.html: